[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/Enemies/ShockBall.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Shadows/BiggerShadow.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Hit-HurtBox/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Enemy-scripts/ShockElemental.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Enemies/EnemyStats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Enemies/PlayerDetectionArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Hit-HurtBox/HitBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Misc/SoftCollision.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Enemies/TinyHealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 1.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 7.0
height = 2.0

[sub_resource type="CircleShape2D" id=21]
radius = 6.0

[sub_resource type="CircleShape2D" id=20]
radius = 134.004

[sub_resource type="CircleShape2D" id=22]
radius = 8.0

[node name="ShockElemental" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -15 )
frames = SubResource( 9 )
frame = 7
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 11 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
collision_mask = 4
healthGain = 0
knockback_power = 200

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, -11 )
shape = SubResource( 21 )
disabled = false

[node name="EnemyStats" parent="." instance=ExtResource( 5 )]
max_health = 8

[node name="PlayerDetectionArea" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionArea" index="0"]
modulate = Color( 1, 1, 1, 0.227451 )
shape = SubResource( 20 )

[node name="RayCast2D" parent="PlayerDetectionArea" index="1"]
position = Vector2( 0, -13 )

[node name="SoftCollision" parent="." instance=ExtResource( 8 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 22 )

[node name="TinyHealthBar" parent="." instance=ExtResource( 9 )]

[node name="TextureProgress" parent="TinyHealthBar" index="0"]
margin_left = -8.0
margin_top = -13.0
margin_right = 32.0
margin_bottom = 27.0

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="HurtBox"]
[editable path="HitBox"]
[editable path="PlayerDetectionArea"]
[editable path="SoftCollision"]
[editable path="TinyHealthBar"]
